==> RT-Thread/rt-thread/bsp/wch/arm/Libraries/ch32_drivers/drv_gpio_ch32f20x.c <==
#include <rtthread.h>
#include <rtdevice.h>
#include <rthw.h>
#include "board.h"
#include "ch32f20x_gpio.h"
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])
#define ASSIGN_PIN(pin, group, gpio_pin)                                                            \
    {                                                                                               \
        pin, GPIO_Pin_##gpio_pin, GPIO_PortSourceGPIO##group, GPIO_PinSource##gpio_pin, GPIO##group \
    }
#define NOT_USE_PIN    \
    {                  \
        -1, 0, 0, 0, 0 \
    }

void ch32f2_pin_mode(rt_device_t dev, rt_base_t pin, rt_uint8_t mode)
{
    const struct pin_info *item;
    GPIO_InitTypeDef gpio_initstruct;

    item = pin_info_list_find(pin);

    if (item == RT_NULL)
    {
        return;
    }

    gpio_initstruct.GPIO_Pin = item->gpio_pin;
    gpio_initstruct.GPIO_Mode = GPIO_Mode_Out_PP;
    gpio_initstruct.GPIO_Speed = GPIO_Speed_50MHz;

    if (mode == PIN_MODE_OUTPUT)
    {
        gpio_initstruct.GPIO_Mode = GPIO_Mode_Out_PP;
    }
    else if (mode == PIN_MODE_INPUT)
    {
        gpio_initstruct.GPIO_Mode = GPIO_Mode_IN_FLOATING;
    }
    else if (mode == PIN_MODE_INPUT_PULLUP)
    {
        gpio_initstruct.GPIO_Mode = GPIO_Mode_IPU;
    }
    else if (mode == PIN_MODE_INPUT_PULLDOWN)
    {
        gpio_initstruct.GPIO_Mode = GPIO_Mode_IPD;
    }
    else if (mode == PIN_MODE_OUTPUT_OD)
    {
        gpio_initstruct.GPIO_Mode = GPIO_Mode_Out_OD;
    }

    GPIO_Init(item->gpio, &gpio_initstruct);
}

void ch32f2_pin_write(rt_device_t dev, rt_base_t pin, rt_uint8_t value)
{
    const struct pin_info *item;

    item = pin_info_list_find(pin);

    if (item == RT_NULL)
    {
        return;
    }

    GPIO_WriteBit(item->gpio, item->gpio_pin, (BitAction)value);
}

rt_int8_t ch32f2_pin_read(rt_device_t dev, rt_base_t pin)
{
    const struct pin_info *item;

    item = pin_info_list_find(pin);

    if (item == RT_NULL)
    {
        return PIN_LOW;
    }

    return GPIO_ReadInputDataBit(item->gpio, item->gpio_pin);
}

rt_err_t ch32f2_pin_attach_irq(struct rt_device *device, rt_base_t pin, rt_uint8_t mode, void (*hdr)(void *args),
                               void *args)
{
    struct rt_pin_irq_hdr bind_item;

    bind_item.pin = pin;
    bind_item.mode = mode;
    bind_item.hdr = hdr;
    bind_item.args = args;

    return exti_line_irq_list_bind(&bind_item);
}

rt_err_t ch32f2_pin_detach_irq(struct rt_device *device, rt_base_t pin)
{
    return exti_line_irq_list_unbind(pin);
}

rt_err_t ch32f2_pin_irq_enable(struct rt_device *device, rt_base_t pin, rt_uint8_t enabled)
{
    struct exti_line_irq *find;
    const struct pin_info *item;
    rt_base_t level;

    EXTI_InitTypeDef EXTI_InitStructure;
    NVIC_InitTypeDef NVIC_InitStructure;

    find = exti_line_irq_list_find(pin);

    if (find == RT_NULL)
        return -RT_EINVAL;

    item = pin_info_list_find(pin);

    if (item == RT_NULL)
        return -RT_EINVAL;

    if (enabled == PIN_IRQ_ENABLE)
    {

        level = rt_hw_interrupt_disable();

        GPIO_EXTILineConfig(item->portsource, item->pinsource);
        EXTI_InitStructure.EXTI_Line = find->exit_line;
        EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;

        switch (find->bind_irq_hdr.mode)
        {
        case PIN_IRQ_MODE_RISING:
        {
            EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Rising;
            break;
        }
        case PIN_IRQ_MODE_FALLING:
        {
            EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Falling;
            break;
        }
        case PIN_IRQ_MODE_RISING_FALLING:
        {
            EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Rising_Falling;
            break;
        }
        default:
            break;
        }

        EXTI_InitStructure.EXTI_LineCmd = ENABLE;
        EXTI_Init(&EXTI_InitStructure);

        NVIC_InitStructure.NVIC_IRQChannel = find->irqn;
        NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = find->nvic_priority;
        NVIC_InitStructure.NVIC_IRQChannelSubPriority = find->nvic_subpriority;

        NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
        NVIC_Init(&NVIC_InitStructure);

        rt_hw_interrupt_enable(level);
    }
    else
    {
        level = rt_hw_interrupt_disable();

        EXTI_InitStructure.EXTI_Line = find->exit_line;
        EXTI_InitStructure.EXTI_LineCmd = DISABLE;
        EXTI_Init(&EXTI_InitStructure);

        NVIC_InitStructure.NVIC_IRQChannelCmd = DISABLE;
        NVIC_Init(&NVIC_InitStructure);

        rt_hw_interrupt_enable(level);
    }

    return RT_EOK;
}
